# dg

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .travis.yml  CMakeLists.txt  Changelog  DartConfiguration.tcl  Dockerfile  LICENSE  README.md  dg.spec.rpkg  git-version.sh
lib/: BBlockBase.cpp  CMakeLists.txt  Debug.cpp  Offset.cpp
lib/ControlDependence/: CDGraph.h  ControlClosure.h  DOD.h  DODNTSCD.h  NTSCD.h
lib/MemorySSA/: Definitions.cpp  MemorySSA.cpp  ModRef.cpp
lib/PointerAnalysis/: Pointer.cpp  PointerAnalysis.cpp  PointerGraph.cpp  PointerGraphOptimizations.cpp  PointerGraphValidator.cpp  PointsToSet.cpp
lib/ReachingDefinitions/: BasicRDMap.cpp  ReachingDefinitions.cpp
lib/ReadWriteGraph/: ReadWriteGraph.cpp
lib/SystemDependenceGraph/: DependenceGraph.cpp
lib/ValueRelations/: Relations.cpp
lib/analysis/: Offset.cpp
lib/analysis/MemorySSA/: MemorySSA.cpp
lib/analysis/PointsTo/: Pointer.cpp  PointerAnalysis.cpp  PointerGraphValidator.cpp  PointerSubgraphValidator.cpp  PointsToSet.cpp
lib/analysis/ReachingDefinitions/: BasicRDMap.cpp  RDMap.cpp  ReachingDefinitions.cpp  ReachingDefinitionsGraph.cpp
lib/analysis/ReadWriteGraph/: ReadWriteGraph.cpp
lib/llvm/: ControlExpression.h  GraphBuilder.h  LLVMDGAssemblyAnnotationWriter.h  LLVMDGVerifier.cpp  LLVMDGVerifier.h  LLVMDependenceGraph.cpp  LLVMNode.cpp  MemAllocationFuncs.h  Slicing.cpp  SummaryEdges.cpp  llvm-utils.h
lib/llvm/ControlDependence/: Block.cpp  Block.h  CDGraph.h  CMakeLists.txt  ControlClosure.h  ControlDependence.cpp  DOD.h  Function.cpp  Function.h  GraphBuilder.cpp  GraphBuilder.h  IGraphBuilder.h  InterproceduralCD.cpp  InterproceduralCD.h  NTSCD.cpp  NTSCD.h  NonTerminationSensitiveControlDependencyAnalysis.h  SCD.cpp  SCD.h  TarjanAnalysis.h
lib/llvm/DataDependenceAnalysis/: LLVMDataDependenceAnalysis.cpp
lib/llvm/DefUse/: DefUse.cpp  DefUse.h
lib/llvm/Dominators/: PostDominators.cpp
lib/llvm/ForkJoin/: ForkJoin.cpp  ForkJoin.h
lib/llvm/PointerAnalysis/: BasicAliasAnalysis.cpp  Block.cpp  Calls.cpp  Constants.cpp  Globals.cpp  Instructions.cpp  Interprocedural.cpp  PointerAnalysis.cpp  PointerGraph.cpp  PointerGraphValidator.cpp  PointerGraphValidator.h  Structure.cpp  Threads.cpp
lib/llvm/ReadWriteGraph/: Calls.cpp  Instructions.cpp  (+2 more)
src/: BBlock.h  CMakeLists.txt  DG2Dot.h  DGOutput.cpp  DGOutput.h  DGParameters.h  DGUtil.cpp  DGUtil.h  DependenceGraph.cpp  DependenceGraph.h  EdgesContainer.h  LLVMDependeceGraph.cpp  LLVMDependeceGraph.h  LLVMDependenceGraph.cpp  LLVMDependenceGraph.h  Node.h  PostDominators.h  Utils.h
src/ADT/: Bitvector.h  DGContainer.h  NumberSet.h  Queue.h
src/analysis/: Analysis.h  BFS.h  DFS.h  DataFlowAnalysis.h  DominanceFrontiers.h  NodesWalk.h  Offset.cpp  Offset.h  PSS.cpp  PSS.h  Pointer.cpp  Pointer.h  PointsToFlowInsensitive.h  PointsToFlowSensitive.h  PostDominanceFrontiers.h  RDMap.cpp  RDMap.h  ReachingDefinitions.cpp  ReachingDefinitions.h  SCC.h  Slicing.h  SubgraphNode.h
src/llvm/: AnalysisGeneric.cpp  AnalysisGeneric.h  DefMap.cpp  DefMap.h  DefUse.cpp  DefUse.h  DependenceGraph.cpp  DependenceGraph.h  LLVMDG2Dot.h  LLVMDGAssemblyAnnotationWriter.h  LLVMDGVerifier.cpp  LLVMDGVerifier.h  LLVMDependenceGraph.cpp  LLVMDependenceGraph.h  LLVMDependenceGraphBuilder.h  LLVMNode.cpp  LLVMNode.h  LLVMPointsToAnalysis.h  LLVMReachingDefinitions.cpp  LLVMReachingDefinitions.h  MemAllocationFuncs.cpp  MemAllocationFuncs.h  PSS.cpp  PSS.h  PointsTo.cpp  PointsTo.h  PostDominators.cpp  ReachingDefs.cpp  ReachingDefs.h  Slicer.h  llvm-util.h
tests/: .gitignore  CMakeLists.txt  adt-test.cpp  bitvector-benchmark.cpp  bitvector-test.cpp  cmd-args.py  data-flow-test.cpp  dg-dump.cpp  dg-test.cpp  disjunctive-interval-map-regressions.cpp  disjunctive-intervals-map-test.cpp  llvm-dg-test.cpp  lt.sh  nodes-walk-test.cpp  numbers-set-test.cpp  numbers-set1-regressions.cpp  points-to-set-test.cpp  points-to-test.cpp  pta-inv-infinite-loop.sh  ptset-benchmark.cpp  rdmap-benchmark  rdmap-benchmark.cpp  rdmap-test.cpp  reaching-definitions-test.cpp  readwritegraph-test.cpp  run-slicing-test.sh  run-slicing-threaded-test.sh  slicing-alias_of_return.sh  slicing-bitcast1.sh  slicing-bitcast2.sh  slicing-bitcast3.sh  slicing-bitcast4.sh  slicing-bitcast5.sh  slicing-control-regression1.sh  slicing-dynalloc1.sh  slicing-dynalloc2.sh  slicing-dynalloc3.sh  slicing-dynalloc4.sh  slicing-dynalloc5.sh  slicing-dynalloc6.sh  (+138 more)
tests/fuzzing/: CMakeLists.txt  bitvector1.cpp  disjunctive-map1.cpp  numbers-set1.cpp
tests/slicing/: CMakeLists.txt  test-runner-debug.py  test-runner.py  test_assert.c  test_assert.h  tests.py
tests/sources/: alias_of_return.c  bitcast1.c  bitcast2.c  bitcast3.c  bitcast4.c  bitcast5.c  control-regression1.c  dynalloc1.c  dynalloc2.c  dynalloc3.c  dynalloc4.c  dynalloc5.c  dynalloc6.c  dynalloc7.c  fptoui1.c  funcarray1.c  funcarray2.c  funcarray3.c  funcptr-regression1.c  funcptr1.c  funcptr10.c  funcptr11.c  funcptr12.c  funcptr13.c  funcptr2.c  funcptr3.c  funcptr4.c  funcptr5.c  funcptr6.c  funcptr7.c  funcptr8.c  funcptr9.c  get_ptr.c  global1.c  global10.c  global2.c  global3.c  global4.c  global5.c  global6.c  (+86 more)
tests/thread-regions-llvm-files/: pthread_exit.ll  simple.ll
tests/thread-regions-test-files/: pthread_exit.c  simple.c
tools/: CMakeLists.txt  TimeMeasure.h  args.h  dgtool  display-slice.sh  git-version.h.in  git-version.sh  ldg-show.sh  llvm-aa-dump.cpp  llvm-blocks-dump.cpp  llvm-cda-bench.cpp  llvm-cda-dump.cpp  llvm-cda-stress.cpp  llvm-cg-dump.cpp  llvm-dda-compare.cpp  llvm-dda-dump.cpp  llvm-dg-deps.cpp  llvm-dg-dump.cpp  llvm-ntscd-dump.cpp  llvm-ps-dump.cpp  llvm-pss-compare.cpp  llvm-pss-dump.cpp  llvm-pta-ben.cpp  llvm-pta-compare.cpp  llvm-pta-dump.cpp  llvm-pta-eval.cpp  llvm-rd-dump.cpp  llvm-sdg-dump.cpp  llvm-slicer-c  llvm-slicer-crit.cpp  llvm-slicer-metadata.cpp  llvm-slicer-opts.cpp  llvm-slicer-opts.h  llvm-slicer-preprocess.cpp  llvm-slicer-preprocess.h  llvm-slicer-utils.cpp  llvm-slicer-utils.h  llvm-slicer.cpp  llvm-slicer.h  llvm-thread-regions-dump.cpp  (+11 more)
(+728 files in other folders)
